[package]
name = "blobstorage"
version = "0.1.0"
authors = ["Fredrik Meringdal <fmeringdal@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
leveldb = "0.8.6"
actix-web = "3"
base64 = "0.12.3"
rocksdb = "0.15.0"
serde_json = "1.0"
serde = "1.0.116"
curl = "0.4.33"
rand = "0.7.3"
actix-cors = "0.3.0"
